# vecinita-scraper

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  Dockerfile  Makefile  QUICKREF.md  QUICKSTART.md  README.md  modal_api_entry.py  modal_workers_entry.py  pyproject.toml  render.yaml
.github/workflows/: ci-cd.yml
docs/: IMPLEMENTATION_STATUS.md  PROXY_AUTH_SETUP.md
migrations/: 001_create_scraping_jobs.sql  002_create_content_tables.sql  003_page_pipeline_chunk_embedding.sql  apply_render_gateway_schema.sh  render_gateway_scraper_schema.sql
scripts/: deploy.sh
smoke/: crawl_smoke_urls.yaml
src/vecinita_scraper/: __init__.py  app.py
src/vecinita_scraper/api/: app.py  modal_proxy_routes.py  routes.py  server.py
src/vecinita_scraper/chunkers/: semantic_chunker.py
src/vecinita_scraper/clients/: embedding_client.py
src/vecinita_scraper/core/: config.py  db.py  errors.py  logger.py  models.py  outcome_kinds.py  postgres_json_sanitize.py
src/vecinita_scraper/crawlers/: classification.py  crawl4ai_adapter.py  document_fetcher.py  outcome_codec.py  text_extractors.py
src/vecinita_scraper/persistence/: __init__.py  gateway_http.py
src/vecinita_scraper/processors/: docling_processor.py
src/vecinita_scraper/services/: __init__.py  job_control.py
src/vecinita_scraper/workers/: chunker.py  chunking_defaults.py  embedder.py  finalizer.py  ingestion_pipeline.py  job_failure.py  pipeline_errors.py  pipeline_retry.py  pipeline_spawn.py  processor.py  scraper.py
tests/: conftest.py  scraper_modal_embedding_payloads.py
tests/api/: test_api_routes.py
tests/core/: test_auth_config_validate.py
tests/integration/: test_full_pipeline.py  test_openapi_schemathesis.py  test_queued_page_pipeline_edge_content.py  test_queued_page_pipeline_happy_path.py  test_scrape_job_zero_success_summary.py  test_smoke_crawl_live.py  test_smoke_list_composition.py
tests/pact/: test_scraper_embedding_modal_message_pact.py  test_scraper_embedding_modal_message_pact_provider_verify.py
tests/unit/: test_chunker_worker.py  test_chunking_defaults.py  test_classification.py  test_crawl4ai_adapter.py  test_docling_processor.py  test_document_fetcher.py  test_embedder_worker.py  test_embedding_client.py  test_embedding_client_modal_contract.py  test_finalizer_worker.py  test_get_db_modal_gateway.py  test_ingestion_pipeline.py  test_job_control_gateway.py  test_job_control_modal_dispatch.py  test_modal_deployment.py  test_outcome_codec.py  test_pipeline_concurrency_cap.py  test_pipeline_retry_policy.py  test_postgres_config.py  test_processor_worker.py  test_scraper_skips_pipeline_for_failed_pages.py  test_scraper_worker.py  test_semantic_chunker.py  test_worker_failure_paths.py
