[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vecinita-scraper"
version = "0.1.0"
description = "Serverless web scraping pipeline with job queue management on Modal"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "VECINA Team", email = "contact@vecina.org"}
]

dependencies = [
    # Web scraping
    "crawl4ai>=0.4.0",
    "docling>=0.4.0",
    
    # LLM & embeddings
    "langchain>=0.1.0",
    "tiktoken>=0.5.0",
    
    # Modal serverless
    "modal>=0.59.0",
    
    # Web framework & async
    "fastapi>=0.100",
    "uvicorn>=0.23.0",
    "httpx>=0.25.0",
    
    # Database
    "psycopg2-binary>=2.9.9",
    
    # Data validation
    "pydantic>=2.0",
    
    # ENV variables
    "python-dotenv>=1.0",
    
    # Logging
    "structlog>=23.0",
    
    # Async compatibility
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "hypothesis>=6.0.0",
    "schemathesis>=4.14.3",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0",
    "isort>=5.12.0",
    "pre-commit>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
addopts = "--strict-markers"
markers = [
    "live: tests that hit real APIs (deselect with '-m \"not live\"')",
    "integration: integration tests",
    "unit: unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::requests.exceptions.RequestsDependencyWarning",
]

[tool.coverage.run]
source = ["src/vecinita_scraper"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
min_percentage = 95
precision = 2

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["crawl4ai"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["structlog", "docling", "docling.document_converter"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "W", "F", "I", "C90", "UP", "B", "A", "C4"]
lint.per-file-ignores = {"__init__.py" = ["F401"], "tests/**" = ["F811"]}

[tool.black]
line-length = 100
target-version = ["py311"]
